<resources>
    <string name="app_name">Instafoodies</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>


    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_likes">LikesActivity</string>
    <string name="change_photo">Change Photo</string>
    <string name="user_name">User name</string>
    <string name="display_name">Display name</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>


    <!-- Intent Extras -->
    <string name="calling_activity">calling_activity</string>
    <string name="intent_user">intent_user</string>

    <!-- activity names -->
    <string name="profile_activity">Profile Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_group">New group</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">OPEN CAMERA</string>
    <string name="string_next">Next</string>
    <string name="string_add">Add</string>
    <string name="selected_uris">selected uris</string>
    <string name="selected_images">selected images</string>
    <string name="string_share">Share</string>
    <string name="calories">calories</string>
    <string name="recipe_details">Recipe</string>
    <string name="search_activity">Search Activity</string>

    <string name="view_post_fragment">view_post_fragment</string>


    <!-- fragment names -->
    <string name="profile_fragment">Profile</string>
    <string name="view_profile_fragment">ViewProfile</string>
    <string name="view_comments_fragment">View Comments</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <!-- Firebase messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>


    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Intent Extras -->
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>

    <!-- Bundle arg names -->
    <string name="activity_number">activity_number</string>
    <string name="bundle_photo">bundle_photo</string>
    <string name="bundle_user_account_settings">bundle_user_account_settings</string>

    <!-- activity names -->
    <string name="home_activity">Home Activity</string>

    <!-- strings -->
    <string name="post">PHOTO</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment...</string>]
</resources>