<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                app:civ_border_color="@color/black"
                android:layout_centerHorizontal="true"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/changeProfilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:layout_below="@+id/profilePhoto"
                android:layout_centerHorizontal="true"
                android:textColor="@color/DodgerBlue"
                android:textSize="16sp"/>


            <!-- User name section -->
            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/changeProfilePhoto"
                android:layout_marginTop="50dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_user_name"
                    android:layout_centerVertical="true"/>

                    <EditText
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="40dp"
                        android:background="@null"
                        android:hint="@string/user_name"
                        android:inputType="textNoSuggestions"/>

            </RelativeLayout>

            <!-- Display name section -->
            <RelativeLayout
                android:id="@+id/relLayout2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout1"
                android:layout_marginTop="15dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_display_name"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/etDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/display_name"
                    android:inputType="textNoSuggestions"/>
            </RelativeLayout>

            <!-- Website section -->
            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout2"
                android:layout_marginTop="15dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_website"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/etWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/website"
                    android:inputType="textNoSuggestions"/>
            </RelativeLayout>

            <!-- Description section -->
            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout3"
                android:layout_marginTop="15dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_description"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/description"
                    android:inputType="textNoSuggestions"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/textPrivateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relLayout4"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:text="PRIVATE INFORMATION"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:background="@drawable/gray_border_bottom"/>

            <!-- Email section -->
            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/textPrivateInfo"
                android:layout_marginTop="15dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_email"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textNoSuggestions"/>
            </RelativeLayout>

            <!-- Phone section -->
            <RelativeLayout
                android:id="@+id/relLayout6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/relLayout5"
                android:layout_marginTop="15dp"
                android:background="@drawable/gray_border_bottom">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_phone"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:background="@null"
                    android:hint="@string/phone"
                    android:inputType="textNoSuggestions"/>
            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</merge>